--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,14 @@
   <!--Favicon-->
   <link rel="shortcut icon" href="{{ site.baseurl }}/{{ site.theme_settings.favicon }}" type="image/x-icon">
 
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script type="text/javascript">
+    (adsbygoogle = window.adsbygoogle || []).push({
+            google_ad_client: "ca-pub-2408628281705149",
+            enable_page_level_ads: true
+       });
+  </script>
+
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.9.0/css/all.css"
     integrity="sha384-i1LQnF23gykqWXg6jxC2ZbCbUMxyw5gLZY6UiUS98LYV5unm8GWmfkIS6jqJfb4E" crossorigin="anonymous">
