--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,6 +15,16 @@ layout: default
     <aside id="aside" class="col-md-4">
       {% include aside.html %}
     </aside>
+    <!-- horizontal -->
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-client="ca-pub-2408628281705149"
+         data-ad-slot="2721118604"
+         data-ad-format="auto"
+         data-full-width-responsive="true"></ins>
+    <script>
+         (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
     <!-- Post List -->
     <section id="posts" class="col-md-8">
       {% for post in paginator.posts %}
