--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,6 +9,16 @@ layout: page
       {{ page.date | date: "%B %-d, %Y" }}
     </p>
   </section>
+  <!-- horizontal -->
+  <ins class="adsbygoogle"
+       style="display:block"
+       data-ad-client="ca-pub-2408628281705149"
+       data-ad-slot="2721118604"
+       data-ad-format="auto"
+       data-full-width-responsive="true"></ins>
+  <script>
+       (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
   <section class="post-content">
     {{ content }}
   </section>
