--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,6 +22,11 @@
 
   <!-- CSS -->
   <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
+  <style type="text/css">
+    .highlight pre {
+      background-color: transparent;
+    }
+  </style>
 
   <!-- OG Tag -->
   {% if page.title %}
