--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,31 +6,31 @@
       {% case current[0] %}
       {% when 'tags'%}
       <!-- tags -->
-      <a href="{{ site.baseurl }}">
+      <a href="{{ site.url }}">
         <li class="btn-nav">Blog</li>
       </a>
       <li class="current">Tags</li>
-      <a href="{{ site.baseurl }}/portfolio">
+      <a href="{{ site.url }}/portfolio">
         <li class="btn-nav">Portfolio</li>
       </a>
       <!-- portfolio -->
       {% when 'portfolio'%}
-      <a href="{{ site.baseurl }}">
+      <a href="{{ site.url }}">
         <li class="btn-nav">Blog</li>
       </a>
-      <a href="{{ site.baseurl }}/tags">
+      <a href="{{ site.url }}/tags">
         <li class="btn-nav">Tags</li>
       </a>
       <li class="current">Portfolio</li>
       {% else %}
       <!-- others -->
-      <a href="{{ site.baseurl }}">
+      <a href="{{ site.url }}">
         <li class="current btn-nav">Blog</li>
       </a>
-      <a href="{{ site.baseurl }}/tags">
+      <a href="{{ site.url }}/tags">
         <li class="btn-nav">Tags</li>
       </a>
-      <a href="{{ site.baseurl }}/portfolio">
+      <a href="{{ site.url }}/portfolio">
         <li class="btn-nav">Portfolio</li>
       </a>
       {% endcase %}
