--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,7 +30,7 @@
 
   <!-- OG Tag -->
   {% if page.title %}
-  {% assign title = site.theme_settings.title | append: "-" | append: page.title %}
+  {% assign title = page.title %}
   {% else %}
   {% assign title = site.theme_settings.title %}
   {% endif %}
