--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,7 +21,7 @@
   <link href='//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css' rel='stylesheet' type='text/css'>
 
   <!-- CSS -->
-  <link rel="stylesheet" href="{{ '/assets/css/main.css' | site.url }}">
+  <link rel="stylesheet" href="{{ site.url }}/assets/css/main.css">
   <style type="text/css">
     .highlight pre {
       background-color: transparent;
