--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -1,9 +1,9 @@
 <!-- User Profile -->
 <div id="profile">
   {% assign profile = site.theme_settings.profile %}
-  <a href="{{ site.baseurl }}/portfolio">
+  <a href="{{ site.url }}/portfolio">
     <div class="img-wrap">
-      <img src="{{ site.baseurl }}/{{ profile.image }}" alt="profile-image">
+      <img src="{{ site.url }}/{{ profile.image }}" alt="profile-image">
     </div>
   </a>
   <p class="username">{{ profile.username }}</p>
@@ -20,14 +20,14 @@
     <p class="title">TAGS</p>
   </a>
   {% for tag in site.tags %}
-  <a href="{{site.baseurl}}/tags#{{ tag | first | cgi_encode }}">
+  <a href="{{site.url}}/tags#{{ tag | first | cgi_encode }}">
     <span class="tag">{{ tag | first }}</span>
   </a>
   {% endfor %}
 </div>
 <!-- Project -->
 <div id="proj-wrap">
-  <a href="{{ site.baseurl }}/portfolio#projects">
+  <a href="{{ site.url }}/portfolio#projects">
     <p class="title">PROJECTS 🙋🏻 </p>
     <hr class="proj-hr">
     {% for _ in site.data.projects %}
