--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -29,7 +29,7 @@ layout: default
     <section id="posts" class="col-md-8">
       {% for post in paginator.posts %}
       <div class="post">
-        <a href="{{ post.url | relative_url }}">
+        <a href="{{ site.url }}{{ post.url }}">
           <div class="post-wrap">
             <div class="text-warp">
               <h3 class="title">{{ post.title }}</h3>
