--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -9,7 +9,7 @@ layout: page
     <div class="row">
       <div class="img-wrap col-12 col-md-4">
         <div class="img">
-          <img src="{{ site.baseurl }}/{{ profile.image }}" alt="user_image">
+          <img src="{{ site.url }}/{{ profile.image }}" alt="user_image">
         </div>
       </div>
       <div class="text-wrap col-12 col-md-8">
