--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,7 +25,7 @@
   <style type="text/css">
     .highlight pre {
       background-color: transparent;
-      overflow: auto;
+      overflow: auto !important;
     }
   </style>
 
