--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,6 +22,7 @@ layout: page
   <br>
   <section class="post-content">
     {{ content }}
+    <p><a href="#!">https://github.com/mzaini30/labs/raw/master{{ page.path }}</a></p>
   </section>
 </div>
 
