--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,7 +22,8 @@ layout: page
   <br>
   <section class="post-content">
     {{ content }}
-    <p><a href="#!">https://github.com/mzaini30/labs/raw/master{{ page.path }}</a></p>
+    <br>
+    <p><a href="https://github.com/mzaini30/labs/raw/master/{{ page.path }}">Lihat source code.</a></p>
   </section>
 </div>
 
