--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,7 +24,7 @@
   <link rel="stylesheet" href="{{ site.url }}/assets/css/main.css">
   <style type="text/css">
     .highlight pre {
-      background-color: transparent;
+      /*background-color: transparent;*/
       overflow: auto !important;
     }
   </style>
